--- a/sass.html
+++ b/sass.html
@@ -1,20 +1,27 @@
+<!--
+	NOTES:
+	1. All tokens are represented by '$' sign in the template.
+	2. You can write your code only wherever mentioned.
+	3. "DO NOT" alter the tokens in the template html as they are required during publishing.
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled-2</title>
+<title>saas</title>
 <!-- write your code here -->
 
 
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-<script src="Untitled-2.js"></script>
+<script src="saas.js"></script>
 <script>
 var canvas, stage, exportRoot;
 function init() {
 	// --- write your JS code here ---
 	
 	canvas = document.getElementById("canvas");
-	exportRoot = new lib.Untitled2();
+	exportRoot = new lib.loadax();
 
 	stage = new createjs.Stage(canvas);
 	stage.addChild(exportRoot);
